[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/UI/Screen/StatisticScreen/StatsScreen/BarContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/UI/Screen/StatisticScreen/StatsScreen/GeneralBox/GeneralBox.gd" type="Script" id=2]
[ext_resource path="res://Game/UI/Theme/title_theme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="GeneralBox" type="Label"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -55.0
margin_right = 95.0
margin_bottom = 55.0
rect_min_size = Vector2( 190, 110 )
mouse_filter = 1
custom_styles/normal = SubResource( 5 )
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 180.0
margin_bottom = 100.0
rect_min_size = Vector2( 170, 0 )
custom_constants/vseparation = 6

[node name="Title" type="HBoxContainer" parent="CenterContainer/GridContainer"]
margin_right = 167.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
custom_constants/separation = 10

[node name="Value" type="Label" parent="CenterContainer/GridContainer/Title"]
margin_right = 167.0
margin_bottom = 10.0
rect_min_size = Vector2( 65, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
text = "General"

[node name="GameTime" parent="CenterContainer/GridContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 16.0
margin_right = 167.0
margin_bottom = 26.0

[node name="Runs" parent="CenterContainer/GridContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 32.0
margin_right = 167.0
margin_bottom = 42.0

[node name="CharacterCompletion" parent="CenterContainer/GridContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 48.0
margin_right = 167.0
margin_bottom = 58.0

[node name="MapCompletion" parent="CenterContainer/GridContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 64.0
margin_right = 167.0
margin_bottom = 74.0

[node name="EnemyCompletion" parent="CenterContainer/GridContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 80.0
margin_right = 167.0
margin_bottom = 90.0
